--- a/uevent-frontend/src/styles/CompanyModal.module.css
+++ b/uevent-frontend/src/styles/CompanyModal.module.css
@@ -1,17 +1,8 @@
-/* CompanyModal.module.css */
-
-.container {
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
 .textCenter {
     text-align: center;
 }
 
 .modalContent {
-    background-color: #343a40;
     color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
@@ -46,8 +37,14 @@
 
 .buttonContainer {
     display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buttonRow {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 .button {
@@ -56,8 +53,8 @@
     border: none;
     font-size: 1.2rem;
     font-weight: bold;
+    margin: 3px;
     cursor: pointer;
-    padding: 12px 24px;
     transition: background-color 0.3s ease;
     text-transform: uppercase;
 }
