--- a/uevent-frontend/src/styles/EventPage.module.css
+++ b/uevent-frontend/src/styles/EventPage.module.css
@@ -1,127 +1,87 @@
 .container {
-    max-width: 800px;
-    padding: 20px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
 .card {
     background-color: #212529;
-    color: #ffffff;
-    border: none;
+    color: #fff;
+    text-align: center;
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+    padding: 20px;
 }
 
 .image {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .title {
-    font-size: 2.8rem;
     color: #00ddff;
     font-weight: bold;
-    text-align: center;
+    font-size: 20px;
     margin-bottom: 20px;
-}
-
-.description {
-    font-size: 1.8rem;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 30px;
 }
 
 .infoContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
     margin-top: 30px;
-    padding: 0 20px;
 }
 
 .info {
-    flex-basis: calc(50% - 20px);
-    max-width: 350px;
-    padding: 20px;
     background-color: #343a40;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
-    margin-bottom: 20px;
-    transition:
-        transform 0.3s,
-        box-shadow 0.3s,
-        background-color 0.3s;
+    color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    padding: 5px;
+    transition: all 0.3s ease-in-out;
     cursor: pointer;
     overflow: hidden;
 }
 
 .info:hover {
-    transform: translateY(-7px);
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
-}
-
-.info:hover:before {
-    opacity: 0.9;
-}
-
-.infoLabel {
-    display: block;
-    font-size: 1.4rem;
-    color: #adb5bd;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    font-weight: bold;
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
 .infoText {
-    display: block;
-    font-size: 1.6rem;
+    font-size: 16px;
     color: #ffffff;
-    font-weight: bold;
-    text-align: center;
 }
 
-.buyButton {
+.infoText:first-child {
+    font-weight: bold;
+}
+
+.infoText:not(:first-child)::before {
+    content: ': ';
+    font-weight: bold;
+}
+
+.buyButton,
+.button,
+.smallButton {
     padding: 8px 16px;
-    font-size: 32px;
-    border-radius: 4px;
+    font-size: 16px;
     border-radius: 30px;
     background-color: #343a40;
-    border-color: #00e1ff;
-    color: #ffffff;
-    transition:
-        background-color 0.3s,
-        border-color 0.3s,
-        color 0.3s;
+    color: #fff;
+    border: 2px solid #00e1ff;
+    transition: all 0.3s ease-in-out;
 }
 
-.buyButton:hover {
+.buyButton:hover,
+.button:hover {
     background-color: #00d9ff;
     border-color: #4d97aa;
-    color: #fff;
-}
-
-.button {
-    padding: 8px 16px;
-    font-size: 32px;
-    border-radius: 4px;
-    border-radius: 30px;
-    background-color: #343a40;
-    border-color: #00e1ff;
-    color: #ffffff;
-    transition:
-        background-color 0.3s,
-        border-color 0.3s,
-        color 0.3s;
-}
-
-.button:hover {
-    background-color: #00c0b9 !important;
 }
 
 .smallButton {
-    padding: 8px 16px;
     font-size: 14px;
     border-radius: 4px;
 }
