--- a/uevent-frontend/src/styles/GoogleMap.css
+++ b/uevent-frontend/src/styles/GoogleMap.css
@@ -12,7 +12,7 @@
     overflow: hidden;
 }
 
-/* .pac-item {
+.pac-item {
     cursor: pointer;
     position: relative;
     z-index: 6000;
@@ -23,12 +23,12 @@
     line-height: 30px;
     text-align: left;
     border-top: 1px solid #e6e6e6;
-    font-size: 11px;
+    font-size: 14px;
     color: #ffffff;
 }
 
 .pac-icon {
-    width: 20px;
+    width: 15px;
     height: 20px;
     margin-right: 7px;
     margin-top: 6px;
@@ -37,4 +37,4 @@
     background-image: url(https://maps.gstatic.com/mapfiles/api-3/images/autocomplete-icons.png);
     -webkit-background-size: 34px 34px;
     background-size: 34px;
-} */
+}
