--- a/uevent-frontend/src/styles/EventPage.module.css
+++ b/uevent-frontend/src/styles/EventPage.module.css
@@ -1,82 +1,89 @@
 .container {
-    max-width: 600px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
 .card {
-    background-color: #212529;
+    background: linear-gradient(45deg, #292929, #1a1a1a);
     color: #fff;
     text-align: center;
-    border-radius: 15px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    box-shadow:
+        0 10px 20px rgba(0, 0, 0, 0.4),
+        0 0 20px rgba(255, 255, 255, 0.2);
     padding: 20px;
 }
 
 .image {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
     width: 100%;
-    object-fit: cover;
+    height: auto;
 }
 
 .title {
     color: #00ddff;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.description {
+    font-size: 18px;
+    line-height: 1.5;
     margin-bottom: 20px;
 }
 
 .infoContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px;
-    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .info {
-    background-color: #343a40;
     color: #ffffff;
-    border-radius: 10px;
+    border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    padding: 5px;
-    transition: all 0.3s ease-in-out;
+    padding: 10px 20px;
+    margin: 10px;
     cursor: pointer;
-    overflow: hidden;
+    background-color: #3a3a3a;
+    background-image: linear-gradient(
+        45deg,
+        #3a3a3a,
+        #525252,
+        #3a3a3a
+    ); /* Добавляем градиентный фон */
+    background-size: 200% 200%;
+    transition: background-position 0.5s;
 }
 
 .info:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    transform: translateY(-3px);
+    box-shadow:
+        0 6px 12px rgba(0, 0, 0, 0.5),
+        inset 0 0 20px rgba(255, 255, 255, 0.2);
+    background-position: right bottom;
 }
 
 .infoText {
     font-size: 16px;
-    color: #ffffff;
+    color: rgba(255, 255, 255, 0.9);
+    display: block;
+
+    margin-bottom: 5px;
 }
 
-.infoText:first-child {
-    font-weight: bold;
-}
-
-.buyButton,
-.button,
-.smallButton {
-    padding: 8px 16px;
-    font-size: 16px;
-    border-radius: 30px;
-    background-color: #343a40;
+.buyButton {
+    padding: 15px 30px;
+    font-size: 20px;
+    border-radius: 40px;
+    border: 1px solid transparent;
+    background: linear-gradient(45deg, #292929, #1a1a1a);
     color: #fff;
-    border: 2px solid #00e1ff;
     transition: all 0.3s ease-in-out;
 }
 
-.buyButton:hover,
-.button:hover {
-    background-color: #00d9ff;
-    border-color: #4d97aa;
-}
-
-.smallButton {
-    font-size: 14px;
-    border-radius: 4px;
+.buyButton:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(0, 255, 255, 0.4);
 }
