--- a/uevent-frontend/src/styles/EventPage.module.css
+++ b/uevent-frontend/src/styles/EventPage.module.css
@@ -1,24 +1,16 @@
-.container {
-    display: flex;
-    padding: 1px;
-    max-width: 800px;
-    margin: 0 auto;
-}
-
 .card {
-    background: linear-gradient(45deg, #292929, #1a1a1a);
+    background-color: #212529;
     color: #fff;
+    border: 2px solid #34495e;
     text-align: center;
     border-radius: 20px;
     box-shadow:
         0 10px 20px rgba(0, 0, 0, 0.4),
         0 0 20px rgba(255, 255, 255, 0.2);
-    padding: 20px;
 }
 
 .image {
     width: 100%;
-    height: auto;
 }
 
 .title {
@@ -49,14 +41,10 @@
     margin: 10px;
     cursor: pointer;
     background-color: #3a3a3a;
-    background-image: linear-gradient(
-        45deg,
-        #3a3a3a,
-        #525252,
-        #3a3a3a
-    ); /* Добавляем градиентный фон */
+    background-image: linear-gradient(45deg, #3a3a3a, #525252, #3a3a3a);
     background-size: 200% 200%;
     transition: background-position 0.5s;
+    overflow: hidden;
 }
 
 .info:hover {
@@ -88,4 +76,96 @@
 .buyButton:hover {
     transform: scale(1.05);
     box-shadow: 0 0 20px rgba(0, 255, 255, 0.4);
+}
+
+.chatContainer {
+    width: 100%;
+    height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.chat {
+    background-color: #2c3e50;
+    border: 2px solid #34495e;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #fff;
+    width: 100%;
+    max-width: 800px;
+    overflow: hidden;
+}
+
+.chatTitle {
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.username {
+    color: #ffffff;
+    margin-bottom: 5px;
+}
+
+.comment-container {
+    margin-bottom: 20px;
+    max-height: 60vh;
+    overflow-y: auto;
+}
+.comment {
+    width: 400px;
+    background-color: #34495e;
+    padding: 15px;
+    border-radius: 10px;
+    word-wrap: break-word;
+}
+
+.comment strong {
+    font-weight: bold;
+    color: #ffa500;
+}
+
+.inputContainer {
+    margin-top: 20px;
+}
+
+.input {
+    background-color: #34495e;
+    color: #fff;
+    border: 1px solid #4d4d4d;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    width: calc(100% - 22px);
+}
+
+.input:focus {
+    border-color: #ffa500;
+    box-shadow: 0 0 0 0.2rem rgba(255, 165, 0, 0.25);
+}
+
+.buttonContainer {
+    text-align: right;
+}
+
+.button {
+    background-color: #34495e;
+    color: #ffffff !important;
+    border: none !important;
+    font-size: 25px;
+    margin: 10px;
+    cursor: pointer !important;
+    transition: background-color 0.3s;
+    right: 0;
+}
+
+.button:hover {
+    background-color: #00c0b9 !important;
 }
