--- a/uevent-frontend/src/styles/EventPage.module.css
+++ b/uevent-frontend/src/styles/EventPage.module.css
@@ -4,9 +4,6 @@
     border: 2px solid #34495e;
     text-align: center;
     border-radius: 20px;
-    box-shadow:
-        0 10px 20px rgba(0, 0, 0, 0.4),
-        0 0 20px rgba(255, 255, 255, 0.2);
 }
 
 .image {
@@ -80,7 +77,6 @@
 
 .chatContainer {
     width: 100%;
-    height: 100vh;
     padding: 20px;
     box-sizing: border-box;
 }
@@ -89,11 +85,12 @@
     background-color: #2c3e50;
     border: 2px solid #34495e;
     border-radius: 15px;
+    padding: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #fff;
     width: 100%;
-    max-width: 800px;
+    max-width: 600px;
     overflow: hidden;
 }
 
@@ -106,7 +103,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 10px;
+    margin: 5px;
 }
 
 .username {
@@ -114,16 +111,16 @@
     margin-bottom: 5px;
 }
 
-.comment-container {
-    margin-bottom: 20px;
-    max-height: 60vh;
+.commentsContainer {
+    margin: 0 auto;
+    max-height: 100vh;
     overflow-y: auto;
 }
+
 .comment {
-    width: 400px;
     background-color: #34495e;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 25px;
     word-wrap: break-word;
 }
 
