--- a/uevent-frontend/src/styles/Profile.module.css
+++ b/uevent-frontend/src/styles/Profile.module.css
@@ -16,11 +16,6 @@
     background-color: #212529;
     border: 1px solid aqua;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s;
-}
-
-.card:hover {
-    transform: translateY(-5px);
 }
 
 .cardTitle {
@@ -53,11 +48,19 @@
 }
 
 .avatar {
+    position: relative;
     width: 150px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
     border: 1px solid aqua;
+    cursor: pointer;
+    transition: filter 0.3s ease;
+}
+
+.avatar:hover {
+    filter: brightness(70%);
+    transform: translateY(-5px);
 }
 
 .company_container {
