--- a/uevent-frontend/src/styles/EventPage.module.css
+++ b/uevent-frontend/src/styles/EventPage.module.css
@@ -37,8 +37,6 @@
     padding: 10px 20px;
     margin: 10px;
     cursor: pointer;
-    background-color: #3a3a3a;
-    background-image: linear-gradient(45deg, #3a3a3a, #525252, #3a3a3a);
     background-size: 200% 200%;
     transition: background-position 0.5s;
     overflow: hidden;
@@ -65,14 +63,16 @@
     font-size: 20px;
     border-radius: 40px;
     border: 1px solid transparent;
-    background: linear-gradient(45deg, #292929, #1a1a1a);
+    background-color: #343a40;
     color: #fff;
     transition: all 0.3s ease-in-out;
 }
 
 .buyButton:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 20px rgba(0, 255, 255, 0.4);
+    background-color: #343a40;
+    border: 0;
+    box-shadow: 0 0 20px rgb(0, 247, 255);
 }
 
 .chatContainer {
@@ -82,7 +82,7 @@
 }
 
 .chat {
-    background-color: #2c3e50;
+    background-color: #343a40;
     border: 2px solid #34495e;
     border-radius: 15px;
     padding: 5px;
@@ -118,7 +118,7 @@
 }
 
 .comment {
-    background-color: #34495e;
+    background-color: #343a40;
     padding: 15px;
     border-radius: 25px;
     word-wrap: break-word;
@@ -126,7 +126,7 @@
 
 .comment strong {
     font-weight: bold;
-    color: #ffa500;
+    background-color: #343a40;
 }
 
 .inputContainer {
@@ -134,7 +134,7 @@
 }
 
 .input {
-    background-color: #34495e;
+    background-color: #343a40;
     color: #fff;
     border: 1px solid #4d4d4d;
     border-radius: 5px;
@@ -153,7 +153,7 @@
 }
 
 .button {
-    background-color: #34495e;
+    background-color: #343a40;
     color: #ffffff !important;
     border: none !important;
     font-size: 25px;
