--- a/uevent-frontend/src/styles/EventList.module.css
+++ b/uevent-frontend/src/styles/EventList.module.css
@@ -97,3 +97,21 @@
     border-top: 2px solid rgba(255, 255, 255, 0.3);
     margin: 30px 0;
 }
+
+.button {
+    background-color: #292929 !important;
+    color: #ffffff;
+    border: none;
+    border-radius: 20px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 5px;
+    margin: 5px;
+    transition: background-color 0.3s ease;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.button:hover {
+    background-color: #008b8b !important;
+}
