--- a/uevent-frontend/src/styles/EventList.module.css
+++ b/uevent-frontend/src/styles/EventList.module.css
@@ -23,7 +23,6 @@
 .card {
     border: 1px solid aqua;
     border-radius: 15px;
-    overflow: hidden;
     transition: transform 0.3s ease-in-out;
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.4);
 }
@@ -33,20 +32,26 @@
 }
 
 .title {
-    font-size: 2.8rem;
+    font-size: 2rem;
     color: #fff;
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-family: 'Montserrat', sans-serif;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     margin-bottom: 15px;
 }
 
 .description {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     color: #ffffff;
     margin-bottom: 30px;
-    line-height: 2;
+    max-width: 1500px;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .details {
