--- a/uevent-frontend/src/styles/EventPage.module.css
+++ b/uevent-frontend/src/styles/EventPage.module.css
@@ -47,10 +47,12 @@
 
 .infoText {
     font-size: 16px;
-
     color: rgba(255, 255, 255, 0.9);
     display: block;
     margin-bottom: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .buyButton {
